--- a/index.html
+++ b/index.html
@@ -9,7 +9,36 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Odin Library</h1>
-    
+    <div id="page-container">
+        <div id="header">
+            <h1>Odin Library</h1>
+            <button id="launch-modal-button">Add Book</button>
+        </div>
+        <div id="books-container">
+
+        </div>
+        <div id="modal">
+            <form action="/" method="post" id="add-new-book-form">
+                <legend>Add New Book</legend>
+                <img id="modal-close-button" src="./icons/close.png">
+
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title" minlength="1" maxlength="20" required>
+
+                <label for="author">Author</label>
+                <input type="text" name="author" id="author" minlength="1" maxlength="20" required>
+
+                <label for="pages">Pages</label>
+                <input type="number" name="pages" id="pages" min="1" max="10000" required>
+
+                <label for="read">Read?</label>
+                <label class="toggle">
+                    <input type="checkbox" name="read" id="read">
+                    <span class="slider round"></span>
+                </label>
+                <button>Add Book</button>
+            </form>
+        </div>
+    </div>    
 </body>
 </html>
